# sales_ui_lock

./: apps.txt  pyproject.toml
sales_ui_lock/: hooks.py  modules.txt  workspace_sidebar.py
sales_ui_lock/public/js/: desk_ui_lock.js  disable_navbar_items.js
sales_ui_lock/sales_ui_lock/: install.py
sales_ui_lock/sales_ui_lock/workspaces/sales_user/: sales_user.json
