[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales_ui_lock"
version = "0.0.1"
description = "Force roles to their specific module and eliminate desktop access"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
  "frappe>=15"
]
readme = "README.md"
license = { text = "MIT" }
